[package]
name = "dn"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
eframe = { version = "0.33.3", default-features=false, features = ["wayland", "glow", "x11", "persistence"] }
chrono = { version = "0.4.44", features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
ron = "0.12.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
egui_extras = { version = "0.33.3",default-features = false,  features = ["image"] }
