[package]
name = "dn"
version = "1.0.4"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
eframe = { version = "0.34.1", features = ["persistence"] }
chrono = { version = "0.4.44", features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
ron = "0.12.1"
rand = "0.10.1"
